Fixed spacing issues with left sidebar on different display widths.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -244,14 +244,15 @@ body {
   }
 
   ul {
-		margin-top: 0.5em;
+		width: 100%;
+		padding-left: 1em;
+		padding-right: 1em;
+		margin-top: 0.6em;
+    margin-bottom: 0;
+    padding-bottom: 0; 
 		&:last-child {
 			padding-bottom: 1.0em;
 		}
-    margin-left: 1em;
-    margin-right: 1em;
-    margin-bottom: 0;
-    padding-bottom: 0; 
     a { 
       font-size: 0.8em;
     }
